# SqliteAdapter

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example1.cpp
include/SqliteAdapter/: sqliteadapter.h  sqliteconnection.h  sqlitedatabaseadapter.h  sqlitetransaction.h  transactiontype.h
include/SqliteAdapter/helpers/: sqliteexechelper.h
src/: sqliteconnection.cpp  sqlitedatabaseadapter.cpp  sqlitetransaction.cpp
src/helpers/: sqliteexechelper.cpp
